css/styles.css
/* ... */
.button.submit:hover { background: #d94c22; }

.request .field-label {
  margin-bottom: 1em;
}

/*
===============================================
DISCLAIMERS
===============================================
*/

.disclaimers {
  width: 100%;
  clear: both;
  color: #666;
  border-top: 1px solid #ccc;
  padding-top: 2em;
}

.disclaimers .certification-lead-in {
  color: #222;
  font-weight: bold;
}

.disclaimers .certification ol {
  font-size: 0.85em;
}

.disclaimers .certification li {
  line-height: 1.4em;
  margin-bottom: 1em;
}

.disclaimers .asterisk-funding {
  font-size: 0.85em;
  border-top: 1px solid #ccc;
  margin-top: 2em;
  padding-top: 2em;
}

.disclaimers .asterisk-funding a,
.disclaimers .asterisk-funding p {
  float: left;
}

.disclaimers .asterisk-funding a {
  position: absolute;
  margin-left: 1.5em;
  color: #222;
  font-weight: bold;
}

.disclaimers .asterisk-funding p {
  margin: 0 0 0 2.75em;
  line-height: 1.4em;
}


/*
===============================================
MEDIA QUERIES
===============================================
*/

@media (max-width: 900px) {

  body {
    font-size: 14px;
  }

  .wrapper {
    padding: 1.5em;
  }

  .left-column,
  .right-column {
    width: 47.75%;
  }

  .left-column {
    margin-right: 2%;
  }

  .field-set {
    margin-top: 1em;
    padding-top: 1em;
  }

  .field-row {
    margin-bottom: 0;
  }

  .first-name,
  .last-name,
  .city,
  .state,
  .zip {
    width: 100%;
    float: none;
  }

  .first-name,
  .last-name,
  .address,
  .city,
  .state,
  .zip,
  .employer,
  .occupation,
  .card-number {
    margin-bottom: 4%;
  }

  .card-icons img {
    width: 43px;
  }

  .use-paypal {
    font-size: 0.8em;
    padding: 0.35em 0.75em 0.4em 0.75em;
    float: left;
    top: auto;
  }

  .use-paypal img {
    top: 0.3em;
  }

  .card-icons {
    margin-bottom: 1em;
  }

}

@media (max-width: 767px) {

  body {
    background: #fff;
    font-size: 14px;
  }

  .nav-wrapper {
    padding: 0.5em 0 0.25em 0;
  }

  .nav-bar .logo img {
    width: 15em;
  }

  .wrapper {
    padding: 0;
  }

  .left-column,
  .right-column {
    width: 100%;
    float: none;
    margin: 0;
  }

  .meta {
    background: transparent;
    box-shadow: none;
    position: relative;
  }

  .meta-content .photo.desktop {
    display: none;
  }

  .meta .photo.mobile {
    display: block;
    position: absolute;
    top: 1em;
    left: 1em;
  }

  .meta .photo.mobile img {
    width: 3em;
  }

  .title,
  .boom-counter,
  .spending-categories,
  form {
    -webkit-box-sizing: border-box;
    -moz-box-sizing:    border-box;
     box-sizing:        border-box;
  }

  .title,
  .boom-counter,
  form {
    padding: 1em;
  }

  form {
    margin-top: 1em;
  }

  .spending-categories {
    padding: 1em 1.25em;
  }

  .stats,
  .boom-counter,
  .spending-categories {
    background: #f9f9f9;
  }

  .stats {
    box-shadow: inset 0 1px 3px rgba(0,0,0,0.15);
  }

  .title {
    padding-bottom: 0;
    padding-left: 5em;
  }

  .title h1 {
    font-size: 1.4em;
    padding-top: 0.2em;
  }

  .meta-content {
    padding: 0;
    border-top: 1px solid #ddd;
  }

  .meta-content .stats {
    width: 100%;
    padding-top: 1em;
    padding-bottom: 1em;
  }

  .meta-content .stats .stats-list li {
    float: left;
    width: 33.3333333%;
    margin-bottom: 0;
    text-align: center;
  }

  .meta-content .stats .stats-list li:last-child {
    margin-right: 0;
  }

  .boom-counter {
    border: none;
  }

  .boom-counter-label {
    text-align: center;
  }

  .category-info {
    display: none;
  }

  .spending-categories {
    padding-top: 0;
    border-bottom: 1px solid #ddd
  }

  .spending-categories h4 {
    margin-bottom: 0;
  }

  .spending-categories h4 a {
    display: block;
    float: right;
    position: relative;
    font-weight: normal;
    font-size: 0.85em;
    top: 0.25em;
  }

  .category-info {
    margin-top: 0.5em;
  }

  .categories .type,
  .categories .purchases {
    width: 50%;
  }

  .categories .type {
    font-size: 0.9em;
  }

  .field-label {
    font-size: 1.2em;
  }

  .email,
  .phone,
  .expiration-date,
  .security-code {
    width: 100%;
    float: none;
  }

  .email,
  .expiration-date {
    margin-bottom: 4%;
  }

  .expiration-date select {
    width: 48%;
  }

  .expiration-month {
    margin-right: 2%;
  }

  .submit-container {
    margin-bottom: 1em;
  }

  .disclaimers {
    padding: 0;
  }

  .disclaimers .certification,
  .disclaimers .asterisk-funding {
    padding: 2em 1em;
    -webkit-box-sizing: border-box;
    -moz-box-sizing:    border-box;
     box-sizing:        border-box;
  }

  .disclaimers .certification ol {
    padding-bottom: 0;
    margin-bottom: 0;
  }

  .disclaimers .certification ol li:last-child {
    margin-bottom: 0;
  }

  .disclaimers .asterisk-funding {
    margin-top: 0;
  }

}

@media (min-width: 768px) {

  .meta { border: 1px solid #ddd; }

  .meta-content .stats { padding-left: 0.75em; }

  .meta-content .stats-list li {
    text-align: left;
    margin-bottom: 1em;
    padding-left: 10%;
  }

}

